web/src/components/Tag/Tag.module.scss
/** Codes & Blockquotes */
.tag {
  padding: calc(2 * var(--gap));
  border-radius: calc(1.5 * var(--gap));
  margin: 0;
  overflow: hidden;

  font-family: var(--title-family);
  font-size: var(--s-1);
  text-shadow: none;
}

.default {
  background-color: var(--surface4);
  color: var(--text2);
}

.success {
  background-color: hsl(160, var(--brand-saturation), 35%);
  color: var(--surface1);
}
.error {
  background-color: hsl(10, var(--brand-saturation), 35%);
  color: var(--surface1);
}

.transparent {
  background-color: transparent;
  color: var(--text2);
}

